# butter-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
.github/workflows/: compile_deploy_latex.yml
docs/: main.tex
examples/: non-persistent-global-chat.rs  wiki.rs
src/: client.rs  discover.rs  introducer.rs  introduction.rs  lib.rs  line_codec.rs  main.rs  multicast.rs  p2ptest.rs  peer.rs  peer_to_peer.rs  server.rs  tcp_listener.rs  threadpool.rs  utils.rs
tests/: retrieval_performance_test.rs
