[package]
name = "butter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.12" # TODO: modify discover to remove this
igd = "0.12.0"
kademlia_dht = { git = "https://github.com/f0lg0/kademlia-dht" } # from online repo