[package]
name = "butter"
version = "0.1.0"
edition = "2018"

[dependencies]
socket2 = "0.3.12" # TODO: modify discover to remove this
#igd = "0.12.0"
sysinfo = "0.22.3"
uuid =  { version = "0.8", features = ["v4",] }
serde_json = "1.0.73"
serde = "1.0.132"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html